# rate-prof-slide

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/slide_rater/: __init__.py  cli.py  extract.py  judge.py  metric_prompts.py  models.py  pipeline.py
src/slide_rater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
web/: app.py
web/static/: style.css
web/templates/: index.html
